2006-01-25  Bruno coudoin  <bruno.coudoin@free.fr>

	First release of a new activity, the wordprocessor.
	Uncomplete yet.

	* boards/Makefile.am:
	* boards/boardicons/README:
	* boards/boardicons/wordprocessor.png:
	* boards/wordprocessor.xml.in:
	* src/boards/Makefile.am:
	* src/boards/wordprocessor.c: (pause_board), (start_board),
	(end_board), (set_level), (is_our_board),
	(wordprocessor_destroy_all_items), (wordprocessor_create),
	(item_event):

2006-01-23  Yves Combe  <yves@ycombe.net>

	constraint resize icon.

	* src/boards/menu2.c: (menu_create_item):

2006-01-23  Yves Combe  <yves@ycombe.net>

	add background for menu2, with the differents zones. 

	* boards/skins/gartoon/gcompris-menu2bg.png:
	* src/boards/menu2.c: (menu_start):

2006-01-23  Yves Combe  <yves@ycombe.net>

	fix segfault i had in level 4 5 6 of magic hat.

	* src/boards/magic_hat.c: (place_item):

2006-01-23  Yves Combe  <yves@ycombe.net>

	fix bug in menu2.
	minor update in magic_hat (MB)

	* src/boards/magic_hat.c: (hat_event):
	* src/boards/menu2.c: (menu_start), (display_section),
	(item_event), (create_top):

2006-01-22  Yves Combe  <yves@ycombe.net>

	new activity magic_hat by Marc Brun.

	* boards/Makefile.am:
	* boards/boardicons/magic_hat.png:
	* boards/magic_hat.xml.in:
	* boards/magic_hat/hat-point.png:
	* boards/magic_hat/hat.png:
	* boards/magic_hat/magic_hat-bg.png:
	* boards/magic_hat/star-clear.png:
	* boards/magic_hat/star.png:
	* boards/magic_hat/star1.png:
	* boards/magic_hat/star2.png:
	* boards/magic_hat/star3.png:
	* src/boards/Makefile.am:
	* src/boards/magic_hat.c: (pause_board), (start_board),
	(end_board), (process_ok), (set_level), (is_our_board),
	(magic_hat_next_level), (magic_hat_destroy_all_items),
	(magic_hat_create_item), (finished), (game_won), (draw_frame),
	(draw_table), (draw_hat), (place_item), (item_event), (hat_event),
	(nb_list), (smooth_move):
	* src/boards/menu2.c: (display_welcome):

2006-01-21  Yves Combe  <yves@ycombe.net>
