@@ -1,6 +1,6 @@
 /* gcompris - bar.c
  *
- * Time-stamp: <2005/10/03 21:36:37 bruno>
+ * Time-stamp: <2006/01/25 10:24:33 yves>
  *
  * Copyright (C) 2000-2003 Bruno Coudoin
  *
@@ -53,6 +53,8 @@ static GnomeCanvasItem *about_item = NULL;
 static guint level_handler_id;
 
 static gint sound_play_id = 0;
+
+void  confirm_quit(gboolean answer);
 
 /*
  * Main entry point 
@@ -553,7 +555,12 @@ item_event_bar(GnomeCanvasItem *item, GdkEvent *event, gchar *data)
 	}
       else if(!strcmp((char *)data, "quit"))
 	{
-	  gcompris_exit();
+	  //gcompris_exit();
+	  gcompris_confirm( "GCompris confirmation",
+			    "Sure you want to quit ?",
+			    "Yes, i am sure !",
+			    "No, i am Bruno\'s daughter",
+			    (ConfirmCallBack) confirm_quit);
 	}
       break;
       
@@ -564,7 +571,11 @@ item_event_bar(GnomeCanvasItem *item, GdkEvent *event, gchar *data)
 
 }
 
-
+void     confirm_quit(gboolean answer)
+{
+  if (answer)
+    gcompris_exit();
+}
 
 
 /* Local Variables: */
